--- a/.github/workflows/PalomaWink.yml
+++ b/.github/workflows/PalomaWink.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
 
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@master
 
     # Repositorio que será utilizado para gerar os arquivos.
       - uses: Platane/snk@master
